--- a/计算机网络.md
+++ b/计算机网络.md
@@ -52,7 +52,7 @@
 
 ​		第三次握手：TCP 客户进程收到 B 的确认后，还要向 B 给出确认。确认报文段的 ACK 置 1，确认号 ack = y + 1，而自己的序号 seq = x + 1。这时 ACK 报文段可以携带数据。但如果不携带数据则不消耗序号，这种情况下，下一个数据报文段的序号仍是 seq = x + 1。这时，TCP 连接已经建立，A 进入 ESTABLISHED（已建立连接）状态。 
 
-	### 5、为什么两次握手不可以呢？
+### 5、为什么两次握手不可以呢？
 
 ​		为了<font color="red">为了防止已经失效的连接请求报文段突然又传送到了B，因而产生错误。</font>例如：A发出的第一个连接请求报文段并没有丢失，而是在网络结点长时间滞留了，以致于延误到连接释放以后的某个时间段才到达B。本来这是一个早已失效的报文段。但是B收到此失效的连接请求报文段后，就误认为A又发出一次新的连接请求。B就向A发出确认报文段，建立连接。
 
@@ -67,3 +67,39 @@
 ​		 第二次挥手：B 收到连接释放报文段后立即发出确认，确认号是 ack = u + 1，而这个报文段自己的序号是 v（等于 B 前面已经传送过的数据的最后一个字节的序号加1），然后 B 就进入 CLOSE-WAIT（关闭等待）状态。TCP 服务端进程这时应通知高层应用进程，因而从 A 到 B 这个方向的连接就释放了，这时的 TCP 连接处于半关闭（half-close）状态，即 A 已经没有数据要发送了，但 B 若发送数据，A 仍要接收。也就是说，从 B 到 A 这个方向的连接并未关闭，这个状态可能会持续一段时间。A 收到来自 B 的确认后，就进入 FIN-WAIT-2(终止等待2)状态，等待 B 发出的连接释放报文段。 
 
 ​		 第三次挥手：若 B 已经没有要向 A 发送的数据，其应用进程就通知 TCP 释放连接。这时 B 发出的连接释放报文段必须使 FIN = 1。假定 B 的序号为 w（在半关闭状态，B 可能又发送了一些数据）。B 还必须重复上次已发送过的确认号 ack = u + 1。这时 B 就进入 LAST-ACK(最后确认)状态，等待 A 的确认。 
+
+​		 第四次挥手：A 在收到 B 的连接释放报文后，必须对此发出确认。在确认报文段中把 ACK 置 1，确认号 ack = w + 1，而自己的序号 seq = u + 1（前面发送的 FIN 报文段要消耗一个序号）。然后进入 TIME-WAIT(时间等待) 状态。请注意，现在 TCP 连接还没有释放掉。必须经过时间等待计时器设置的时间 2MSL（MSL：最长报文段寿命）后，A 才能进入到 CLOSED 状态，然后撤销传输控制块，结束这次 TCP 连接。当然如果 B 一收到 A 的确认就进入 CLOSED 状态，然后撤销传输控制块。
+
+### 7、TCP协议是如何保证可靠传输的？
+
+	1.  数据报校验： 目的是检测数据再传输过程中的任何变化，若校验出包有错，则丢弃报文段并且不给出响应，这时TCP发送数据端超时后会重发数据；
+ 	2.  对失序数据包重排序：既然TCP报文段作为IP数据报来传输，而IP数据报的到达可能会失序，因此TCP报文段的到达也可能会失序。TCP将对失序数据进行重新排序，然后才交给应用层；
+ 	3.  丢弃重复数据：对于重复数据，能够丢弃重复数据；
+ 	4.  应答机制：当TCP收到发自TCP连接另一端的数据，它将发送一个确认。这个确认不是立即发送，通常将推迟几分之一秒。
+ 	5.  超时重发：当TCP发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。如果不能及时收到一个确认，将重发这个报文段；
+ 	6.  流量控制：TCP连接的每一方都有固定大小的缓冲空间。TCP的接受端只允许 另一端发送接收端缓冲区所能接纳的数据，这可以防止较快主机致使较慢主机的缓冲区溢出。TCP使用的流量控制协议是可变大小的滑动窗口协议。
+
+### 8、TCP拥塞控制
+
+​		拥塞控制和流量控制不同，前者是一个全局性的过程，而后者指点对点通信量的控制。在某段时间，若对网络中某一资源的需求超过了该资源所能提供的可用部分，网络的性能就要变坏。这种情况就叫拥塞。
+
+​		TCP的拥塞控制采用了四种算法，即：慢开始、拥塞避免、快重传和快恢复。
+
+### 9、说一下GET和POST的区别？
+
+​		GET和POST本质都是HTTP请求，只不过对它们的作用做了界定和适配，并且让它们适应各种的场景。
+
+​		本质区别：GET只是一次HTTP请求，POST先发请求头再发请求体，实际上是两次请求。
+
+		1.  从功能上讲，GET一般用来从服务器上获取资源，POST一般用来更新服务器上的资源；
+  		2.  从REST 服务角度上说，GET是幂等的，即读取同一个资源，总是得到相同的数据而POST不是幂等的。 进一步地，GET 不会改变服务器上的资源，而 POST 会对服务器资源进行改变； 
+
+### 10、在浏览器中输入URL地址到显示主页的过程？
+
+		1. DNS解析：浏览器查询DNS，获取域名对应的IP地址： 具体过程包括浏览器搜索自身的 DNS 缓存、搜索操作系统的 DNS 缓存、读取本地的 Host 文件和向本地 DNS 服务器进行查询等。 缓存没有时，向上层服务器查询递归查询。
+  		2. TCP连接： 浏览器获得域名对应的IP地址后，浏览器向服务器请求建立连接，发起三次握手。
+  		3. 发送HTTP请求：建立连接后，浏览器向服务器发送HTTP请求；
+  		4. 服务器处理请求并返回HTTP报文：服务器接收到这个请求后，根据路径参数映射到特定的请求处理器进行处理，并将处理结果及相应的视图返回给浏览器。
+  		5. 浏览器解析渲染页面：浏览器解析并渲染视图， 若遇到对 js 文件、css 文件及图片等静态资源的引用，则重复上述步骤并向服务器请求这些资源；浏览器根据其请求到的资源、数据渲染页面，最终向用户呈现一个完整的页面。 
+  		6. 连接结束。
+
