--- a/极客时间/杨晓峰36讲.md
+++ b/极客时间/杨晓峰36讲.md
@@ -12,9 +12,38 @@
 
 #### 第二讲 请对比Exception和Error，另外，运行时异常与一般异常有什么区别？
 
-	-  Exception和Error都是继承了Throwable类，在Java中只有Throwable类型的实例才可以被掏出（throw）或者捕获（catch），它是异常处理机制的基本组成类型。
-	-  Exception和Error体现了Java平台设计者对不同异常情况的分类。Exception是程序正常运行中，可以预料的意外情况，可能并且应该被捕获，进行相应处理；ERROR是指正常情况下不太可能出现的情况，绝大部分的ERROR都会导致程序处于非正常、不可恢复状态，例如OutOfMemoryError。
-	-  
+- Exception和Error都是继承了Throwable类，在Java中只有Throwable类型的实例才可以被抛出（throw）或者捕获（catch），它是异常处理机制的基本组成类型。
+- Exception和Error体现了Java平台设计者对不同异常情况的分类。Exception是程序正常运行中，可以预料的意外情况，可能并且应该被捕获，进行相应处理；
+- ERROR是指正常情况下不太可能出现的情况，绝大部分的ERROR都会导致程序处于非正常、不可恢复状态，例如OutOfMemoryError。
+- Excption又分为可检查异常和不检查异常，可检查必须显式地捕获处理，例如：IO、SQLException；不检查异常是可以编码避免的逻辑错误，例如NPE；
+
+ ![img](https://img-blog.csdnimg.cn/2019101117003396.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzI5MjI5NTY3,size_16,color_FFFFFF,t_70) 
+
+
+
+#### 第三讲 谈谈final、finally、finalize有什么不同？
+
+ -	final可以用来修饰类、方法、变量、分别有不同的意义，final修饰的class代表不可以继承扩展，final的变量是不可以修改的，而final的方法也是不可以重写的。
+ -	finally则是Java保证重点代码一定要被执行的一种机制。可以可以使用try-finally等来进行关闭JDBC。
+ -	finalize是基础类java.lang.Object的一个方法，它的设计目的是保证对象在被垃圾收集前完成特定资源的回收。finalize机制现在已经不推荐使用，并且在JDK9开始被标记为deprecated。
+
+
+
+#### 第四讲 强引用、软引用、弱引用、幻想引用有什么区别？具体使用场景是什么？
+
+- 不同的引用类型，主要体现的是对象不同的可达性状态和垃圾收集的影响。
+-  强引用： 就是最常见的普通对象引用，只要还有强引用指向一个对象，就能表明对象还“活着”，垃圾收集器不会碰这种对象。
+- 软引用：是一直相对强引用弱化一些的引用，可以让对象豁免一些垃圾收集，只有当JVM认为内存不足时，才会去试图回收软引用指向的对象。
+- 弱引用：并不能使对象豁免垃圾收集，仅仅是提供一直访问在弱引用状态下对象的途径。
+- 幻想引用，不能通过它访问对象。
+
+
+
+
+
+
+
+
 
 
 
