--- a/极客时间/杨晓峰36讲.md
+++ b/极客时间/杨晓峰36讲.md
@@ -37,9 +37,166 @@
 - 弱引用：并不能使对象豁免垃圾收集，仅仅是提供一直访问在弱引用状态下对象的途径。
 - 幻想引用，不能通过它访问对象。
 
+#### 第五讲 理解Java的字符串，String、StringBuffer、StringBuilder有什么区别？
+
+##### 典型回答
+
+- String是Java语言非常基础和重要的类，提供了构造和管理字符串的各种基本逻辑。它是典型的Immutable(不可变)类，被声明成为final class，所有属性也都是final的。也由于它的不可变形，类似拼接、裁剪字符串等动作，都会产生新的String对象。由于字符串操作的普遍性，所以相关操作的效率往往对应用性能有明显影响。
+
+- StringBuffer是为解决上面提到拼接产生太多中间对象的问题而提供的一个类，我们可以用append或者add方法，把字符串添加到已有序列的末尾或者指定位置。StringBuffer本质是一个线程安全的可修改字符序列，它保证了线程安全，也随之带来了额外的性能开销，所以除非有线程安全的需求，不然还是推荐StringBuilder。
+
+- StringBuilder能力上与StringBuffer没有本质区别，非线程安全。
+
+##### 知识扩展
+
+  1. 字符串设计和实现考量
+
+  - StringBuffer实现的细节，它的线程安全是通过把各种修改数据的方法都加上synchronized关键字实现的。这种简单粗暴的实现方式，非常适合我们常见的线程安全类实现，考虑可靠性、正确性和代码可读性才是大多数应用开发最重要的因素。
+  - 为了实现修改字符序列的目的，StringBuffer和StringBuilder底层都是利用可修改的(char, JDK 9以后是byte)数组，二者都继承了AbstractStringBuilder，里面包含了基本操作，区别仅在于最终的方法是否加了syschronized。
+  - 扩容会产生多重开销，因为要抛弃原有数组，创建新的数组，还要进行arraycopy。
+  - 在日常开发中无需过于担心，平常的`String str = "aa"+"bb"+ "cc" `字符串拼接都是会被javac转换为StringBuilder操作。
 
 
+#### 第六讲 谈谈Java反射机制，动态代理是基于什么原理？
 
+  ##### 典型回答
+
+   - 反射机制是Java语言提供的一种基础功能。通过反射我们可以直接操作类或者对象，比如获取某个对象的类定义，获取类声明的属性和方法，调用方法或者构造对象，甚至可以运行时修改类定义。
+
+   - 动态代理是一种方便运行时动态构建代理、动态处理代理方法调用机制，很多场景都是利用类似机制做到的，比如用来包装RPC调用，面向切面编程（AOP）。
+
+
+##### 知识扩展
+
+1. 动态代理
+
+- 代理可以看做是对调用目标的一个包装，这样我们对目标代码的调用不是直接发生的，而是通过代理完成。
+
+- 通过代理可以让调用者与实现者之间解耦。比如进行RPC调用，框架内部的寻址、序列化、反序列化等，对于调用者往往是没有太大意义的，通过代理，可以提供更加友善的界面。
+
+```
+public class MyDynamicProxy {
+    public static void main(String[] args) {
+        HelloImpl hello = new HelloImpl();
+        MyInvocationHandler handler = new MyInvocationHandler(hello);
+        // 构造代码示例  参数：用哪个类加载器去加载代理对象，动态代理类需要实现的接口，调用处理程序 会调用h里面的invoke方法
+        Hello proxyHello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), HelloImpl.class.getInterfaces(), handler);
+        // 调用代理方法
+        proxyHello.sayHello();
+    }
+}
+
+
+interface Hello {
+    void sayHello();
+}
+
+class HelloImpl implements Hello {
+
+    @Override
+    public void sayHello() {
+        System.out.println("Hello");
+    }
+}
+class MyInvocationHandler implements InvocationHandler {
+    private Object target;
+
+    public MyInvocationHandler(Object target) {
+        this.target = target;
+    }
+
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        System.out.println("before invoking sayHello");
+        Object result = method.invoke(target, args);
+        System.out.println("after invoking sayHello");
+        return result;
+    }
+}
+
+//输出：
+before invoking sayHello
+Hello
+after invoking sayHello
+```
+
+  上面的JDK Proxy例子，非常简单地实现了动态代理的构建和代理操作。首先，实现对应的InvocationHandler；然后，以接口Hello为纽带，为被调用目标构建代理对象，进而应用程序就可以使用代理对象间接运行调用目标的逻辑，代理为应用插入额外逻辑（这里是println）提供了便利的入口。
+
+  
+
+#### 第七讲 int和Integer有什么区别？ 谈谈Integer的值缓存范围
+
+##### 典型回答
+
+	- int是我们常说的整形数字，是Java的8个原始数据类型（boolean、char、float、double、type、short、int、long）之一。Java语言号称一切都是对象，但原始数据类型是例外。
+	- Integer是int对应的包装类，它有一个int类型的字段存储数据，并且提供了基本操作，比如数学运算、int和字符串之间转换等。
+	- 根据实践，大部分数据操作都是集中在有限的、较小的数字范围，默认缓存值是-128到127之间。
+
+##### 知识扩展
+
+ 1. 理解自动装箱、拆箱
+
+    ​	Java平台为我们自动进行了一些转换，保证不同的写法在运行时等价，它们发生在编译阶段，也就是生成的字节码是一致的。javac替我们自动把装箱转换为Integer.valueOf()，把拆箱替换为Integer.intValue() 。
+
+#### 第八讲 对比vector、ArrayList、LinkedList有何区别？
+
+##### 典型回答
+
+​	这三者都是实现集合框架中的List，也就是所谓的有序集合，因此具体功能也比较近似，比如都提供按照位置进行定位、添加或者删除的操作都提供迭代器以遍历其内容等。但因 为具体的设计区别，在行为、性能、线程安全等方面，表现又有很大不同。 
+
+​	Vector是Java早期提供的线程安全的动态数组。Vector内部是使用对象数组来保存数据，可以根据需要自动的添加容量，当数组已满时，会创建新的数组，并拷贝原有数组数据。
+
+​	ArrayList是应用更加广泛的动态数组实现，本身不是线程安全的。Vector在扩容时会提高1倍，而ArrayList这是50%。
+
+​	LinkedList是双向链表，不是线程安全的。
+
+##### 知识扩展
+
+​	java提供的默认排序算法，具体是什么排序方式以及设计思路等
+
+		-  需要区分是Arrays.sort()还是Collections.sort() （底层是调用Arrays.sort()）；什么数据类型；多大的数据集（太小的数据集，复杂排序是没必要的，Java会直接进行二分插入排序）等
+		-  对于原始数据类型，目前使用的是双轴快速排序，是一种改进的快速排序。
+		-  而对于对象数据类型，目前使用的是TimeSort，思想上是一种归并和二分插入结合的优化排序算法。简单说它的思路是查找数据集中已经排好序的分区，然后合并这些分区来达到排序的目的。
+
+```
+// 快排例子
+public class Test {
+
+	public static void sort(int[] arr, int left, int right) {
+		if (left < right) {
+			int i = partition(arr, left, right);
+			sort(arr, left, i - 1);
+			sort(arr, i + 1, right);
+		}
+	}
+	
+	public static int partition(int[] arr, int left, int right) {
+		//基准数
+		int p = arr[left];
+		int i = left;
+		int j = right;
+		while (i < j) {
+			// 右往左扫
+			while (i < j && arr[j] >= p) {
+				j--;
+			}
+            while (i < j && arr[i] <= p) {
+            	i++;
+            }
+            swap(arr,i,j);
+		}
+		swap(arr,left, i);
+		return i;
+	}
+	private static void swap(int[] arr, int i, int j) {
+		int temp = arr[i];
+		arr[i] = arr[j];
+		arr[j] = temp;
+	}
+	
+}
+
+```
 
 
 
