--- a/极客时间/杨晓峰36讲.md
+++ b/极客时间/杨晓峰36讲.md
@@ -122,7 +122,18 @@ after invoking sayHello
 
   上面的JDK Proxy例子，非常简单地实现了动态代理的构建和代理操作。首先，实现对应的InvocationHandler；然后，以接口Hello为纽带，为被调用目标构建代理对象，进而应用程序就可以使用代理对象间接运行调用目标的逻辑，代理为应用插入额外逻辑（这里是println）提供了便利的入口。
 
-  
+ JDK Proxy的优势：
+
+	-  最小化依赖关系，减少依赖意味着简化开发和维护，JDK本身的支持，可能比cglib更加可靠。
+	-  平滑进行JDK版本升级，而字节码类库通常需要进行更新以保证在新版Java上能够使用。
+	-  代码实现简单。
+
+基于cglib框架的优势：
+
+- 有的时候调用目标可能不便实现额外接口，从某种角度看，限定调用者实现接口是有些侵入性的实践，类似cglib动态代理就没有这种限制。
+- 只操作我们关心的类，而不必为其他相关类增加工作量。
+
+
 
 #### 第七讲 int和Integer有什么区别？ 谈谈Integer的值缓存范围
 
@@ -158,12 +169,13 @@ after invoking sayHello
 		-  对于原始数据类型，目前使用的是双轴快速排序，是一种改进的快速排序。
 		-  而对于对象数据类型，目前使用的是TimeSort，思想上是一种归并和二分插入结合的优化排序算法。简单说它的思路是查找数据集中已经排好序的分区，然后合并这些分区来达到排序的目的。
 
-```
+```java
 // 快排例子
 public class Test {
 
 	public static void sort(int[] arr, int left, int right) {
 		if (left < right) {
+			// 一趟快排，返回交换后的数组下标
 			int i = partition(arr, left, right);
 			sort(arr, left, i - 1);
 			sort(arr, i + 1, right);
@@ -185,18 +197,141 @@ public class Test {
             }
             swap(arr,i,j);
 		}
+		 // 先从右往左保证了最后i与基准值交换后一定是正确的
 		swap(arr,left, i);
 		return i;
 	}
+    
 	private static void swap(int[] arr, int i, int j) {
 		int temp = arr[i];
 		arr[i] = arr[j];
 		arr[j] = temp;
 	}
-	
 }
 
 ```
+
+#### 第九讲 对比Hashtable、HashMap、TreeMap有什么不同？
+
+##### 典型回答
+
+ - Hashtable、HashMap、TreeMap都是常见的一些Map实现，是以键值对的形式存储和操作数据的容器类型。
+
+ - Hashtable是早期Java类库提供的一个哈希表，同步，不支持Null键和值，由于同步导致的性能开销，所以已经被很少使用。
+
+ - HashMap是应用更加广泛的哈希表实现，行为上大致与HashTable一致，主要区别在于HashMap不是同步的，支持null键和值等。HashMap进行put或get操作，可以达到常数时间的性能，所以是大部分利用键值对存取的场景首选。
+
+ - TreeMap则是基于红黑树的一种提供顺序访问的Map，和HashMap不同，它的get、put、remove之类操作都是0（log(n)）的时间复杂度，具体顺序可以由指定 的Comparator来决定，或者根据键的自然顺序来判断。
+
+##### 知识扩展
+
+   	HashMap内部的结构，可以看做是数组和链表结合组成的复合结构，数组被分为一个个桶（bucket），通过哈希值决定了在这个数组的寻址；哈希值相同的键值对，则以链表形式存储。如果链表大小超过阈值8，链表就会被改造为树形结构。
+
+putVal源码
+
+```java
+final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
+                   boolean evict) {
+        Node<K,V>[] tab; Node<K,V> p; int n, i;
+        if ((tab = table) == null || (n = tab.length) == 0)
+            n = (tab = resize()).length;
+        if ((p = tab[i = (n - 1) & hash]) == null)
+            //  (n - 1) & hash 计算插入数组下表, 为空则newNode
+            tab[i] = newNode(hash, key, value, null);
+        else {
+            // 数组非空情景
+            Node<K,V> e; K k;
+            if (p.hash == hash &&
+                ((k = p.key) == key || (key != null && key.equals(k))))
+                // 插入key刚好是数组Node的key
+                e = p;
+            // 处理红黑树和链表情景
+            else if (p instanceof TreeNode)
+                e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value);
+            else {
+                for (int binCount = 0; ; ++binCount) {
+                    // 当前接下的下一个节点为Null,新增一个节点
+                    if ((e = p.next) == null) {
+                        p.next = newNode(hash, key, value, null);
+                        // 超过长度链表转换红黑树
+                        if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
+                            treeifyBin(tab, hash);
+                        break;
+                    }
+                    // 当前下个节点是要插入的节点 
+                    if (e.hash == hash &&
+                        ((k = e.key) == key || (key != null && key.equals(k))))
+                        break;
+                    p = e;
+                }
+            }
+            if (e != null) { // existing mapping for key
+                V oldValue = e.value;
+                if (!onlyIfAbsent || oldValue == null)
+                    e.value = value;
+                afterNodeAccess(e);
+                return oldValue;
+            }
+        }
+        ++modCount;
+        if (++size > threshold)
+            resize();
+        afterNodeInsertion(evict);
+        return null;
+    }
+```
+
+从putVal方法最初的几行，就可以发现有意思的地方
+
+- 如果表格是null，resize方法会负责初始化它，这从tab = resizes()可以看出。
+- resize方法兼顾两个职责，创建初始存储表格，或者在容量不满足需求的时候，进行扩容（resize）。
+- 在放置新的键值对的过程中，如果发生下面条件，就会发生扩容。
+
+```java
+// threshold = capacity * load factor
+if (++size > threshold)
+	resize();
+```
+
+- 具体键值对在哈希表中的位置（数组index）取决于下面的位运算：`i = (n - 1) & hash`
+- 仔细观察哈希值的源头，我们会发现，它并不是key本身的hashCode，而是来自于HashMap内部的另外一个hash方法。注意，为什么这里需要将高位数据移位到低位进行异或运算呢？这是因为有些数据计算出的哈希值差异主要在高位，而HashMap里的哈希寻址是忽略容量以上的高位的，那么这种处理就可以有效避免类似情况下的哈希碰撞。
+
+```java
+static final int hash(Object key) {
+        int h;
+        return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+}
+```
+
+	- 为什么要树化？ 本质上这个是一个安全问题。因为在元素放置过程中，如果一个对象哈希冲突都放置一个桶中，则会形成一个链表，链表查询是线性的，会严重影响存取的性能。
+
+
+
+#### 第十讲  如何保证容器是线程安全的？ ConcurrentHashMap如何实现高效地线程安全？
+
+##### 典型回答
+
+​	Java提供了不同层面的线程安全支持。在传统集合框架内部，除了Hashtable等同步容器，还提供了同步包装器，我们可以调用Collections工具类提供的包装方法，来获取一个同步的包装容器（如Collections.synchronizedMap），但是它们都是利用非常粗粒度的同步方式，在高并发情况下，性能比较低。
+
+​	另外，更加普遍的选择是利用并发包提供的线程安全容器类，它提供了：
+
+	-  各种并发容器，比如ConcurrentHashMap、CopyOnWriteArrayList。
+	-  各种线程安全队列，如ArrayBlockingQueue、SynchronousQueu。
+	-  各种有序容器的线程安全版本等。
+
+具体保证线程安全的方式，包括有从简单的synchronize方式，到基于更加精细化，比如基于分离锁实现的ConcurrentHashMap等并发实现等。
+
+##### 知识扩展
+
+1.  为什么需要ConcurrentHashMap?
+
+   Hashtable本身比较低效，因为它的实现基本就是将put、get、size等各种方法加上“synchronized”。简单说，这就导致了所有并发操作都要竞争同一把锁，一个线程在进行同步操作时，其他线程只能等待，大大降低了并发操作的效率。
+
+2. 
+
+
+
+
 
 
 
