--- a/操作系统.md
+++ b/操作系统.md
@@ -92,3 +92,7 @@
 
 ### Socket
 
+前面提到的管道、消息队列、共享内存、信号量和信号都是在同一台主机上进行进场间通信，那要想<fron color="blue">跨网络与不同主机上的进程之间通信，就需要Socket通信了。</font>
+
+主要分为三种常见的通信方式，一个是基于TCP协议的通信方式，一个是基于UDP协议的通信方式，一个是本地进程间通信方式。
+
